objects/Lead_Assessment_Condition__c.object
<CustomObject>
    <fields>
        <fullName>Condition_Filter__c</fullName>
        <label>Condition Filter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>!=</fullName>
                </value>
                <value>
                    <fullName>&lt;</fullName>
                </value>
                <value>
                    <fullName>&lt;=</fullName>
                </value>
                <value>
                    <fullName>=</fullName>
                </value>
                <value>
                    <fullName>&gt;</fullName>
                </value>
                <value>
                    <fullName>&gt;=</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>LIKE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Condition_Name__c</fullName>
        <formula>Lead_Assessment_Query__r.Condition_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Condition Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Condition_Value__c</fullName>
        <label>Condition Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Assessment_Query__c</fullName>
        <label>Lead Assessment Query</label>
        <referenceTo>Lead_Assessment_Query__c</referenceTo>
        <relationshipLabel>Lead Assessment Conditions</relationshipLabel>
        <relationshipName>Lead_Assessment_Conditions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Lead_Assessment_Rule__c</fullName>
        <label>Lead Assessment Rule</label>
        <referenceTo>Lead_Assessment_Rule__c</referenceTo>
        <relationshipLabel>Lead Assessment Conditions</relationshipLabel>
        <relationshipName>Lead_Assessment_Conditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Lead Assessment Condition</label>
    <nameField>
        <displayFormat>CONDITION-{00000}</displayFormat>
        <label>Lead Assesment Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Assessment Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>